--- a/style.css
+++ b/style.css
@@ -1,12 +1,35 @@
 /* CSS Document */
 
+html {
+    font-size: 100px;
+}
+
+@media screen and (max-width: 800px) {
+    html {
+        font-size: 40px !important;
+    }
+}
+
+
+@media screen and (max-width: 1000px) {
+    html {
+        font-size: 60px !important;
+    }
+}
+
+@media screen and (max-width: 1375px) {
+    html {
+        font-size: 80px !important;
+    }
+}
+
 body {
     width: 100vw;
     height: 100vh;
     margin: 0;
     padding: 0;
     font-family: 'Helvetica', sans-serif;
-	color: #0B2EAC;
+    color: #0B2EAC;
 }
 
 canvas {
@@ -21,7 +44,7 @@ canvas {
     height: 100%;
     z-index: 2;
     position: relative;
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
 
 .pages {
@@ -42,40 +65,51 @@ canvas {
 
 .page .page-content {
     display: flex;
+    flex-direction: row;
     justify-content: left;
     align-items: left;
-    margin:0 20px;
+    margin: 0 20px;
     height: 100%;
 }
 
 .page1 .page-content {
-	background: #EC9496;
-	font-size: 99px;
-
+    background: #EC9496;
+    font-size: 1rem;
 }
 
 .page2 .page-content {
     background: #B74749;
-	font-size: 100px;
+    font-size: 1rem;
 }
 
 .page3 .page-content {
-    background:#7C3536;
-	font-size: 120px;
+    background: #7C3536;
+    font-size: 1.2rem;
 }
 
 .page4 .page-content {
     background: #77292A;
-    font-size: 54px;
+    font-size: 0.5rem;
 }
 
 .citation {
     position: relative;
     text-align: left;
     margin: 12px;
+    flex: 1;
 }
 
 .citation a {
-	color: black;
-	text-decoration: none;
+    color: black;
+    text-decoration: none;
+}
+
+.arrow {
+    cursor: pointer;
+    align-self: center;
+    margin: 0 12px;
+}
+
+.arrow.previous {
+    transform: rotate(180deg);
 }
