--- a/styles_page1.css
+++ b/styles_page1.css
@@ -7,11 +7,11 @@ body {
     padding: 0;
     font-family: 'Helvetica', sans-serif;
 	font-size: 30px;
-	color: #EC9496;
+	color: #A0A0A0;
 	background: #FFFFFF;
 }
 a {text-decoration: none;
-  color: #EC9496;
+  color: #A0A0A0;
 }
 
 .content{
