--- a/style.css
+++ b/style.css
@@ -1,115 +1,98 @@
 /* CSS Document */
 
-/*html {
-    font-size: 100px;
+html {
+	font-size: 100px;
 }
 
 @media screen and (max-width: 800px) {
-    html {
-        font-size: 40px !important;
-    }
+html {
+	font-size: 40px !important;
 }
-
+}
 
 @media screen and (max-width: 1000px) {
-    html {
-        font-size: 60px !important;
-    }
+html {
+	font-size: 60px !important;
 }
-
-@media screen and (max-width: 1375px) {
-    html {
-        font-size: 80px !important;
-    }
 }
-*/
+ @media screen and (max-height: 1375px) {
+html {
+	font-size: 80px !important;
+}
 body {
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    font-family: 'Helvetica', sans-serif;
-    color: #0B2EAC;
+	width: 100vw;
+	height: 100vh;
+	margin: 0;
+	padding: 0;
+	font-family: 'Helvetica';
+	color: #0B2EAC;
 }
-
 canvas {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1;
 }
-
 .container {
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    position: relative;
-    overflow: hidden;
+	width: 100%;
+	height: 100%;
+	z-index: 2;
+	position: relative;
+	overflow: hidden;
 }
-
 .pages {
-    transition: all 0.8s;
-    /* Le container fait 4x son parent */
-    width: 400%;
-    height: 100%;
-    background: #54090B;
-    /* Affichage horizontal*/
-    display: flex;
-    flex-direction: row;
+	transition: all 4s;
+	/* Le container fait 4x son parent */
+	width: 400%;
+	height: 100%;
+	background: #54090B;
+	/* Affichage horizontal*/
+	display: flex;
+	flex-direction: row;
 }
-
 .page {
-    width: 100vw;
-    height: 100vh;
+	width: 100vw;
+	height: 100vh;
 }
-
 .page .page-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
-    align-items: left;
-    margin: 0 20px;
-    height: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: left;
+	align-items: left;
+	margin: 0 20px;
+	height: 100%;
 }
-
 .page1 .page-content {
-    background:#A0A0A0;
-    font-size: 68px;
+	background: #A0A0A0;
+	font-size: 68px;
 }
-
 .page2 .page-content {
-    background: #B74749;
-    font-size: 58px;
+	background: #B74749;
+	font-size: 58px;
 }
-
 .page3 .page-content {
-    background: #7C3536;
-    font-size: 68px;
+	background: #7C3536;
+	font-size: 68px;
 }
-
 .page4 .page-content {
-    background: #77292A;
-    font-size: 44px;
+	background: #77292A;
+	font-size: 44px;
 }
-
 .citation {
-    position: relative;
-    text-align: left;
-    margin: 12px;
-    flex: 1;
+	position: relative;
+	text-align: left;
+	margin: 12px;
+	flex: 1;
 }
-
 .citation a {
-    color: black;
-    text-decoration: none;
+	color: black;
+	text-decoration: none;
 }
-
 .arrow {
-    cursor: pointer;
-    align-self: center;
-    margin: 0 12px;
+	cursor: pointer;
+	align-self: center;
+	margin: 0 12px;
 }
-
 .arrow.previous {
-    transform: rotate(180deg);
+	transform: rotate(180deg);
 }
