--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* CSS Document */
 
-html {
+/*html {
 	font-size: 100px;
 }
 
@@ -15,10 +15,12 @@ html {
 	font-size: 60px !important;
 }
 }
- @media screen and (max-height: 1375px) {
+
+@media screen and (max-height: 1375px) {
 html {
 	font-size: 80px !important;
 }
+*/
 body {
 	width: 100vw;
 	height: 100vh;
@@ -33,6 +35,7 @@ canvas {
 	left: 0;
 	z-index: 1;
 }
+	
 .container {
 	width: 100%;
 	height: 100%;
@@ -41,7 +44,7 @@ canvas {
 	overflow: hidden;
 }
 .pages {
-	transition: all 4s;
+	transition: all 1s;
 	/* Le container fait 4x son parent */
 	width: 400%;
 	height: 100%;
@@ -64,19 +67,20 @@ canvas {
 }
 .page1 .page-content {
 	background: #A0A0A0;
-	font-size: 68px;
+  font-size:4.8vw;
 }
 .page2 .page-content {
 	background: #B74749;
-	font-size: 58px;
+  font-size:4vw;
+
 }
 .page3 .page-content {
 	background: #7C3536;
-	font-size: 68px;
+	font-size: 4.8vw;
 }
 .page4 .page-content {
 	background: #77292A;
-	font-size: 44px;
+	font-size: 3.5vw;
 }
 .citation {
 	position: relative;
